user model and login API

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,2 @@
-PORT=8001
-MONGO_STRING= mongodb+srv://admin:admin@cluster0.xvetb.mongodb.net/Rentacar?retryWrites=true&w=majority
+PORT = 8001
+MONGO_STRING =mongodb://admin:admin@cluster0-shard-00-00.xvetb.mongodb.net:27017,cluster0-shard-00-01.xvetb.mongodb.net:27017,cluster0-shard-00-02.xvetb.mongodb.net:27017/Rentacar?replicaSet=atlas-r30kn2-shard-0&ssl=true&authSource=admin
