forgot password and reset password

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,6 @@
 PORT = 8001
 MONGO_STRING =mongodb://admin:admin@cluster0-shard-00-00.xvetb.mongodb.net:27017,cluster0-shard-00-01.xvetb.mongodb.net:27017,cluster0-shard-00-02.xvetb.mongodb.net:27017/Rentacar?replicaSet=atlas-r30kn2-shard-0&ssl=true&authSource=admin
+EMAIL_SERVICE_HOST = smtp.mailtrap.io
+EMAIL_SERVICE_PORT = 2525
+EMAIL_SERVICE_USER = 92e11dc6e6192f
+EMAIL_SERVICE_PASSWORD = f1b2d3c70fb4d8
