--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
